--- a/forget-pas.html
+++ b/forget-pas.html
@@ -33,10 +33,11 @@
                 </form>
                 <div class="button-group">
                     <button class="button button_change">Изменить</button>
-                    <button class="button button_cancel">Отмена</button>
+                    <button class="button button_cancel" onClick='location.href="index.html"'>Отмена</button>
                 </div>
             </div>
         </div>
     </div>
+    <script src="./js/pas-main.js"></script>
 </body>
 </html>
