--- a/game.html
+++ b/game.html
@@ -7,8 +7,391 @@
     <link href="https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="./css/game-first.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header class="header">
+                <div class="logo">
+                    <img src="img/anchor.svg" alt="Logo Picture" class="logo-pic" width="30px" height="30px">
+                    <span class="logo-text">Морской бой</span>
+                </div>
+                <div class="buttons">
+                    <button class="button rules">Правила игры</button>
+                    <button class="button rating">Рейтинг</button>
+                    <button class="button exit">Выход</button>
+                </div>
+        </header>
+        <div class="main-part">
+            <div class="board">
+            <div class="numbers">
+                <span class="number">1</span>
+                <span class="number">2</span>
+                <span class="number">3</span>
+                <span class="number">4</span>
+                <span class="number">5</span>
+                <span class="number">6</span>
+                <span class="number">7</span>
+                <span class="number">8</span>
+                <span class="number">9</span>
+                <span class="number">10</span>
+            </div>
+            <div class="block-alphabet">
+                <div class="alphabet">
+                    <span class="alpha">А</span>
+                    <span class="alpha">Б</span>
+                    <span class="alpha">В</span>
+                    <span class="alpha">Г</span>
+                    <span class="alpha">Д</span>
+                    <span class="alpha">Е</span>
+                    <span class="alpha">Ж</span>
+                    <span class="alpha">З</span>
+                    <span class="alpha">И</span>
+                    <span class="alpha">К</span>
+                </div>
+                <table class="play-board">
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                        <td class="table__item"></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="right-part">
+            <div class="play-text">
+                <span class="title">Разместите корабли</span>
+                <p class="play-desc">Перетащите на поле и кликните, чтобы перевернуть.</p>
+            </div>
+            <div class="ships">
+                <div class="one-ship ship"></div>
+                <div class="two-ships">
+                    <div class="two-ship ship"></div>
+                    <div class="two-ship ship"></div>
+                </div>
+                <div class="three-ships">
+                    <div class="three-ship ship"></div>
+                    <div class="three-ship ship"></div>
+                    <div class="three-ship ship"></div>
+                </div>
+                <div class="four-ships">
+                    <div class="four-ship ship"></div>
+                    <div class="four-ship ship"></div>
+                    <div class="four-ship ship"></div>
+                    <div class="four-ship ship"></div>
+                </div>
+        </div>
+        </div>
+        <div class="enemy-part">
+            <div class="board">
+                <div class="numbers">
+                    <span class="number">1</span>
+                    <span class="number">2</span>
+                    <span class="number">3</span>
+                    <span class="number">4</span>
+                    <span class="number">5</span>
+                    <span class="number">6</span>
+                    <span class="number">7</span>
+                    <span class="number">8</span>
+                    <span class="number">9</span>
+                    <span class="number">10</span>
+                </div>
+                <div class="block-alphabet">
+                    <div class="alphabet">
+                        <span class="alpha">А</span>
+                        <span class="alpha">Б</span>
+                        <span class="alpha">В</span>
+                        <span class="alpha">Г</span>
+                        <span class="alpha">Д</span>
+                        <span class="alpha">Е</span>
+                        <span class="alpha">Ж</span>
+                        <span class="alpha">З</span>
+                        <span class="alpha">И</span>
+                        <span class="alpha">К</span>
+                    </div>
+                    <table class="play-board">
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                        <tr class="table__row">
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                            <td class="table__item"></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="boards-text">
+            <span class="board-title yours-board">Ваше поле</span>
+            <span class="board-title">Поле противника</span>
+        </div>
+        <button class="button start">Начать игру</button>
+
+
+        <div class="modal">
+            <div class="modal-dialog">
+                <div class="modal-header">
+                    <h2 class="modal-title">Рейтинг</h2>
+                    <button class="close">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="rating-column">
+                        <span class="name">1. Марио</span>
+                        <span class="name">2. Вася</span>
+                        <span class="name">3. Петя</span>
+                        <span class="name">4. Маша</span>
+                        <span class="name">5. Эдди</span>
+                        <span class="name">6. Лиза</span>
+                        <span class="name">7. Лёня</span>
+                        <span class="name">8. Ира</span>
+                        <span class="name">9. Витя</span>
+                        <span class="name">10. Мурзик</span>
+                    </div>
+                    <div class="rating-column">
+                        <span class="rate">99</span>
+                        <span class="rate">87</span>
+                        <span class="rate">83</span>
+                        <span class="rate">79</span>
+                        <span class="rate">75</span>
+                        <span class="rate">73</span>
+                        <span class="rate">65</span>
+                        <span class="rate">58</span>
+                        <span class="rate">41</span>
+                        <span class="rate">28</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="./js/main-game.js"></script>
 </body>
 </html>
