--- a/forget-pas.html
+++ b/forget-pas.html
@@ -23,13 +23,13 @@
             <div class="change-area_block">
                 <h2 class="entry_header">Изменение пароля</h2>
                 <form action="" class="change-area_block--login">
-                    <input type="text" class="input log-in" placeholder="Введите логин">
+                    <input type="text" class="input update-log-in" placeholder="Введите логин">
                 </form>
                 <form action="" class="change-area_block--secret-word">
-                    <input type="text" class="input secret-word" placeholder="Введите кодовое слово">
+                    <input type="text" class="input update-secret-word" placeholder="Введите кодовое слово">
                 </form>
                 <form action="" class="change-area_block--password">
-                    <input type="password" class="input password" placeholder="Введите новый пароль">
+                    <input type="password" class="input update-password" placeholder="Введите новый пароль">
                 </form>
                 <div class="button-group">
                     <button class="button button_change">Изменить</button>
@@ -38,6 +38,6 @@
             </div>
         </div>
     </div>
-    <script src="./js/pas-main.js"></script>
+    <script src="./js/pas.js"></script>
 </body>
 </html>
