--- a/game.html
+++ b/game.html
@@ -414,10 +414,10 @@
 
 			<!-- instruction -->
 			<div id="instruction" class="instruction">
-				<div id="type_placement" class="type-placement-box">
+				<!--<div id="type_placement" class="type-placement-box">
 					1. <span class="link" data-target="random">Случайным образом</span><br>
 					2. <span class="link" data-target="manually">Методом перетаскивания.</span>
-				</div>
+				</div>-->
 				<div id="ships_collection" class="ships-collection" hidden>
                     <span class="title">Разместите корабли</span>
 					<p class="play-desc">Перетащите корабли на поле и кликните, чтобы перевернуть.</p>
@@ -469,28 +469,28 @@
                 </div>
                 <div class="modal-body">
                     <div class="rating-column">
-                        <span class="name">1. Марио</span>
-                        <span class="name">2. Вася</span>
-                        <span class="name">3. Петя</span>
-                        <span class="name">4. Маша</span>
-                        <span class="name">5. Эдди</span>
-                        <span class="name">6. Лиза</span>
-                        <span class="name">7. Лёня</span>
-                        <span class="name">8. Ира</span>
-                        <span class="name">9. Витя</span>
-                        <span class="name">10. Мурзик</span>
+                        <span class="name" id="name1"><span>1. </span>Марио</span>
+                        <span class="name" id="name2"><span>2. </span>Вася</span>
+                        <span class="name" id="name3"><span>3. </span>Петя</span>
+                        <span class="name" id="name4"><span>4. </span>Маша</span>
+                        <span class="name" id="name5"><span>5. </span>Эдди</span>
+                        <span class="name" id="name6"><span>6. </span>Лиза</span>
+                        <span class="name" id="name7"><span>7. </span>Лёня</span>
+                        <span class="name" id="name8"><span>8. </span>Ира</span>
+                        <span class="name" id="name9"><span>9. </span>Витя</span>
+                        <span class="name" id="name10"><span>10. </span>Мурзик</span>
                     </div>
                     <div class="rating-column">
-                        <span class="rate">99</span>
-                        <span class="rate">87</span>
-                        <span class="rate">83</span>
-                        <span class="rate">79</span>
-                        <span class="rate">75</span>
-                        <span class="rate">73</span>
-                        <span class="rate">65</span>
-                        <span class="rate">58</span>
-                        <span class="rate">41</span>
-                        <span class="rate">28</span>
+                        <span class="rate" id="rate1">99</span>
+                        <span class="rate" id="rate2">87</span>
+                        <span class="rate" id="rate3">83</span>
+                        <span class="rate" id="rate4">79</span>
+                        <span class="rate" id="rate5">75</span>
+                        <span class="rate" id="rate6">73</span>
+                        <span class="rate" id="rate7">65</span>
+                        <span class="rate" id="rate8">58</span>
+                        <span class="rate" id="rate9">41</span>
+                        <span class="rate" id="rate10">28</span>
                     </div>
                 </div>
             </div>
@@ -546,6 +546,6 @@
         </div>
     </div>
     <script src="./js/main-game.js"></script>
-    <script src="./js/game.js"></script>
+    <script src="./js/game-test.js"></script>
 </body>
 </html>
