--- a/game1.html
+++ b/game1.html
@@ -414,11 +414,10 @@
 
 			<!-- instruction -->
 			<div id="instruction" class="instruction">
-				<div id="type_placement" class="type-placement-box">
-                    <span class="link" data-target="random">"Берега"</span><br>
-                    <span class="link" data-target="randomHalf">"Половина поля"</span><br>
-					<span class="link" data-target="manually">Методом перетаскивания</span>
-				</div>
+				<!--<div id="type_placement" class="type-placement-box">
+					1. <span class="link" data-target="random">Случайным образом</span><br>
+					2. <span class="link" data-target="manually">Методом перетаскивания.</span>
+				</div>-->
 				<div id="ships_collection" class="ships-collection" hidden>
                     <span class="title">Разместите корабли</span>
 					<p class="play-desc">Перетащите корабли на поле и кликните, чтобы перевернуть.</p>
@@ -450,17 +449,9 @@
 		<div id="singledeck4" class="ship singledeck singledeck4"></div>
 	</li>
 </ul>
-<div class="button-group">
-    <button class="button start btn-play" id="play" data-hidden="true">Начать игру</button>
-    <button class="button save" id="save" data-hidden="true">Сохранить расстановку</button>
-    <div class="input__wrapper"  id="load"  data-hidden="true">
-        <input type="file" name="file" id="input__file" class="input input__file" accept=".json">
-        <label for="input__file button" class="input__file-button">
-            <span class="input__file-button-text">Загрузить расстановку</span>
-        </label>
-    </div>
-    <button class="button newgame" id="newgame" data-hidden="true">Продолжить</button>
-</div>
+
+<button class="button start btn-play" id="play" data-hidden="true">Начать игру</button>
+<button class="button newgame" id="newgame" data-hidden="true">Продолжить</button>
 
         <div class="boards-text">
             <span class="board-title yours-board">Ваше поле</span>
