--- a/game.html
+++ b/game.html
@@ -453,7 +453,7 @@
 <div class="button-group">
     <button class="button start btn-play" id="play" data-hidden="true">Начать игру</button>
     <button class="button save" id="save" data-hidden="true">Сохранить расстановку</button>
-    <div class="input__wrapper"  id="load"  data-hidden="true">
+    <div class="input__wrapper"  id="load"  data-hidden="false">
         <input type="file" name="file" id="input__file" class="input input__file" accept=".json">
         <label for="input__file button" class="input__file-button">
             <span class="input__file-button-text">Загрузить расстановку</span>
