--- a/info.html
+++ b/info.html
@@ -104,7 +104,7 @@
                         Прототип страницы ведения игры представлен на рисунке, где пользователь сможет щелчком правой кнопки мыши по клетке поля противника «выстреливать» до тех пор, пока не «потопит» все корабли противника, или пока противник не потопит все его корабли. 
                         Также пользователю всегда доступны кнопки «Рейтинг», «О системе», «Разработчики», «Правила игры» и «Выход».
                     </p>
-                    <img src="./img/start-game.jpg" alt="start image" class="block-image">
+                    <img src="./img/play.jpg" alt="start image" class="block-image">
                     <button class="up" onclick="topFunction()">В начало</button>
                 </div>
                 <div class="block end-game" id="end">
@@ -112,7 +112,7 @@
                     <p class="block-text end-text">
                         После завершения игры должно появиться сообщение, содержащее информацию о выигрыше или проигрыше пользователя, количестве заработанных баллов и кнопки для начала новой игры или выхода из игры.
                     </p>
-                    <img src="./img/start-game.jpg" alt="start image" class="block-image">
+                    <img src="./img/end.jpg" alt="start image" class="block-image">
                     <button class="up" onclick="topFunction()">В начало</button>
                 </div>
                 <div class="block exit-block" id="exit">
